# aminilog

./: .subpatch  LICENSE  Makefile  README.md
include/log/: log_main.h
test/: Android.bp  CMakeLists.txt  Makefile  README.md  run.sh  test.py
test/sdk-app/: settings.gradle
test/sdk-app/app/: AndroidManifest.xml  build.gradle
test/sdk-app/gradle/wrapper/: gradle-wrapper.properties
test/src/: main.cpp  test_alogv.cpp  test_c.c  test_cpp.cpp  test_fatal.cpp  test_fatal_if.cpp  test_fatal_with_message.cpp  test_without_logtag.cpp
